a little bit more structured code

--- a/test_homepage.html
+++ b/test_homepage.html
@@ -4,8 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Awesome Homepage</title>
 	<script type="text/javascript" src="js/awechat.js"></script>
-	<script type="text/javascript" src="js/awechat.event.js"></script>
+	<script type="text/javascript" src="js/awechat.component.js"></script>
 	<script type="text/javascript" src="js/awechat.component.messagebox.js"></script>
+	<script type="text/javascript" src="js/awechat.component.sendbox.js"></script>
+	<script type="text/javascript" src="js/awechat.event.js"></script>
 	<script type="text/javascript" src="js/awechat.html.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/awechat.css" />
 </head>
