trying to set up pusher

--- a/test_homepage.html
+++ b/test_homepage.html
@@ -5,11 +5,14 @@
 	<title>Awesome Homepage</title>
 	<script type="text/javascript" src="js/awechat.js"></script>
 	<script type="text/javascript" src="js/awechat.ajax.js"></script>
-	<script type="text/javascript" src="js/awechat.api.js"></script>
+	<script type="text/javascript" src="js/awechat.api.pusher.js"></script>
 	<script type="text/javascript" src="js/awechat.component.js"></script>
 	<script type="text/javascript" src="js/awechat.component.messagebox.js"></script>
 	<script type="text/javascript" src="js/awechat.component.sendbox.js"></script>
 	<script type="text/javascript" src="js/awechat.html.js"></script>
+
+	<script src="https://js.pusher.com/4.0/pusher.min.js"></script>
+
 	<link rel="stylesheet" type="text/css" href="css/awechat.css" />
 </head>
 
